@@ -110,7 +110,7 @@ Canada              CA       prov = AB, BC, MB, NB, NL, NS, NT, NU, **ON** (defa
                              PE, QC, SK, YU
 Colombia            CO       None
 Croatia             HR       None
-Czech               CZ       None
+Czechia             CZ       None
 Denmark             DK       None
 England                      None
 Estonia             EE       None
